--- a/angular.json
+++ b/angular.json
@@ -28,12 +28,14 @@
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/remixicon/fonts/remixicon.css",
+              "src/assets/css/odometer-theme-default.css",
               "src/assets/css/swiper.min.css"
             ],
             "scripts": [ 
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/jquery/dist/jquery.min.js",
               "src/assets/js/swiper.min.js",
+              "src/assets/js/odometer.min.js",
               "src/assets/js/main.js"
             ] 
           },
